--- a/templates/index.twig
+++ b/templates/index.twig
@@ -248,12 +248,13 @@
                                                         <input
                                                             class="form-control"
                                                             type="text"
+                                                            name="fixers[{{ fixer.name }}][{{ option.name }}][_keys][]"
                                                             value="{{ key }}"
                                                         >
                                                         <input
                                                             class="form-control"
                                                             type="text"
-                                                            name="fixers[{{ fixer.name }}][{{ option.name }}][]"
+                                                            name="fixers[{{ fixer.name }}][{{ option.name }}][_values][]"
                                                             value="{{ v }}"
                                                         >
                                                         <div class="input-group-append">
