--- a/templates/index.twig
+++ b/templates/index.twig
@@ -290,10 +290,7 @@
                         <a
                             href="https://github.com/FriendsOfPHP/PHP-CS-Fixer/issues/new?body={{ issue|url_encode }}"
                             target="_blank"
-                        >
-                            open an issue
-                        </a>
-                        !
+                        >open an issue</a>!
                     </p>
                 {% endif %}
                 {% if deprecationMessages %}
