--- a/templates/index.twig
+++ b/templates/index.twig
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container-fluid">
-        <h1>PHP-CS-Fixer Playground <span class="badge badge-primary">{{ phpCsFixerVersion }}</span></h1>
+        <h1>PHP-CS-Fixer Playground <span class="badge badge-primary">{{ phpCsFixerVersion.number }}</span></h1>
         <div class="row">
             <div class="col-sm-6">
                 <form method="post" action="/run">
