--- a/templates/index.twig
+++ b/templates/index.twig
@@ -62,7 +62,7 @@
                             </div>
                         </div>
                         <div class="col-sm-2 d-flex align-items-end">
-                            <button class="btn btn-primary btn-block mb-3">Run</button>
+                            <button class="btn btn-primary btn-block mb-3">Fix</button>
                         </div>
                     </div>
                     <div class="form-group">
